--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+#    can do this to make parameters autowirable. like services in a constructor
+    App\Service\MixRepository:
+        bind:
+            $isDebug: '%kernel.debug%'
